<resources>
    <string name="app_name">공만세</string>
    <string name="app_version">버전 2.0.0</string>
    <string name="facebook_app_id">1008222056278488</string>
    <string name="kakao_app_key" translatable="false">66773aa669c7d7d858ebebf335f1dc80</string>
    <string name="kakao_scheme">kakao66773aa669c7d7d858ebebf335f1dc80</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="content_format_init_count_value">0</string>
    <string name="content_format_teacher_name">%s 선생님</string>
    <string name="content_format_video_count1">총</string>
    <string name="content_format_video_count2">%,d</string>
    <string name="content_format_video_count3">개</string>
    <string name="content_format_subject_background">#%s</string>
    <string name="content_format_series_video_count">%d</string>
    <string name="content_format_alarm_title">[%s]</string>
    <string name="content_intro_text1">동영상학습 백과사전</string>
    <string name="content_intro_text2"><font color="#ed7600">동영상 강의\n45,000개</font></string>
    <string name="content_intro_text3"><font color="#ed7600">공만세</font>에 오신 것을 환영합니다.</string>
    <string name="content_btn_text">SKIP</string>
    <string name="content_nav_home">홈</string>
    <string name="content_nav_progress">진도학습</string>
    <string name="content_nav_search">검색</string>
    <string name="content_nav_chat">전문가상담</string>
    <string name="content_nav_teacher">강사별강의</string>
    <string name="content_drawer">네비게이션</string>
    <string name="content_title_find_id">아이디 찾기</string>
    <string name="content_title_find_password">비밀번호 찾기</string>
    <string name="content_title_new_password">새 비밀번호</string>
    <string name="content_title_result_find_id">아이디 찾기 결과</string>
    <string name="content_title_result_find_password">비밀번호 변경 완료</string>
    <string name="content_title_video_option">옵션</string>
    <string name="content_title_video_play_speed">재생 속도</string>
    <string name="content_title_qna_category">카테고리 ></string>
    <string name="content_format_selected">전체보기</string>
    <string name="content_format_selected_grade_all">모든 학년</string>
    <string name="content_format_selected_unit_all">모든 단원</string>
    <string name="content_format_selected_subject_all">모든 과목</string>
    <string name="content_format_selected_elementary">초등</string>
    <string name="content_format_selected_middle">중등</string>
    <string name="content_format_selected_high">고등</string>
    <string name="content_format_selected_subject">과목</string>
    <string name="content_format_selected_title">카테고리</string>
    <string name="content_format_selected_video_title">영상 제목</string>
    <string name="content_format_selected_series">시리즈 보기</string>
    <string name="content_format_selected_problem">문제풀이</string>
    <string name="content_format_selected_note">노트 보기</string>
    <string name="content_format_selected_align_title">정렬</string>
    <string name="content_format_selected_align_avg">평점순</string>
    <string name="content_format_selected_align_latest">최신순</string>
    <string name="content_format_selected_align_name">이름순</string>
    <string name="content_format_selected_align_subject">과목순</string>
    <string name="content_format_selected_empty">없음</string>
    <string name="content_format_selected_alarm_title">알림</string>
    <string name="content_format_selected_repeat_title">반복</string>
    <string name="content_format_selected_repeat_title_day">매일</string>
    <string name="content_format_selected_repeat_title_month">매월</string>
    <string name="content_format_selected_repeat_title_year">매년</string>
    <string name="content_format_selected_repeat_day">일마다</string>
    <string name="content_format_selected_alarm1">정시</string>
    <string name="content_format_selected_alarm2">10분 전</string>
    <string name="content_format_selected_alarm3">30분 전</string>
    <string name="content_format_selected_alarm4">1시간 전</string>
    <string name="content_format_selected_alarm5">3시간 전</string>
    <string name="content_format_selected_alarm6">12시간 전</string>
    <string name="content_format_selected_alarm7">1일 전</string>
    <string name="content_format_selected_alarm8">1주 전</string>
    <string name="content_format_selected_repeat1">매일</string>
    <string name="content_format_selected_repeat2">매주</string>
    <string name="content_format_selected_repeat3">매월</string>
    <string name="content_format_selected_repeat4">매년</string>
    <string name="content_format_selected_align_views">조회순</string>
    <string name="content_format_selected_align_relevance">관련순</string>
    <string name="content_format_selected_align_answer">답변 완료순</string>
    <string name="content_home_title_hot1">인기 </string>
    <string name="content_home_title_hot2">HOT!</string>
    <string name="content_home_title_hot3">동영상 강의</string>
    <string name="content_home_title_kem">국영수 강의</string>
    <string name="content_home_title_science">과학 강의</string>
    <string name="content_home_title_society">사회 강의</string>
    <string name="content_home_title_etc">기타 강의</string>
    <string name="content_home_switch_text">자동 재생</string>
    <string name="content_home_title_best1">추천 </string>
    <string name="content_home_title_best2">%s </string>
    <string name="content_home_title_best3">동영상 강의</string>
    <string name="content_home_spinner_default">평점순</string>
    <string name="content_home_spinner_default_relevance">관련순</string>
    <string name="content_progress_title_grade">학년</string>
    <string name="content_progress_title_unit">단원</string>
    <string name="content_counsel_title">상담하기</string>
    <string name="content_counsel_plus">상담하기</string>
    <string name="content_counsel_no_item">상담 내역이 없습니다.</string>
    <string name="content_counsel_no_answer">답변을 기다리는 중입니다.</string>
    <string name="content_counsel_detail_title1">질문 ></string>
    <string name="content_counsel_detail_title2">답변 ></string>
    <string name="content_counsel_detail_title3">사진 ></string>
    <string name="content_counsel_answer_false">대기중 ></string>
    <string name="content_counsel_media_count">0</string>
    <string name="content_counsel_media_count2">/3</string>
    <string name="content_counsel_answer_true">답변 완료 ></string>
    <string name="content_counsel_dialog_title">사진</string>
    <string name="content_counsel_dialog_select1">사진 선택</string>
    <string name="content_counsel_dialog_select2">영상 선택</string>
    <string name="content_counsel_hint">질문을 입력해 주세요</string>
    <string name="content_description_image_logo">로고 이미지</string>
    <string name="content_description_image_intro">인트로 이미지</string>
    <string name="content_description_image_splash">로딩 이미지</string>
    <string name="content_description_image_banner">배너 이미지</string>
    <string name="content_description_image_close">닫기 이미지</string>
    <string name="content_description_image_about">공만세 이야기 이미지</string>
    <string name="content_description_image_manual">공만세 메뉴얼 이미지</string>
    <string name="content_description_image_photo">사진 선택 이미지</string>
    <string name="content_description_image_video">영상 선택 이미지</string>
    <string name="content_description_image_media">미디어 추가 이미지</string>
    <string name="content_description_image_media_default">미디어 기본 이미지</string>
    <string name="content_description_image_notice">공지사항 및 이벤트 이미지</string>
    <string name="content_description_image_profile">프로필 이미지</string>
    <string name="content_description_image_counsel_preview">프로필 이미지</string>
    <string name="content_description_image_id">로그인 아이디 이미지</string>
    <string name="content_description_image_password">로그인 비밀번호 이미지</string>
    <string name="content_description_image_password_confirm">로그인 비밀번호 재확인 이미지</string>
    <string name="content_description_image_new_password">새 비밀번호 이미지</string>
    <string name="content_description_image_new_password_confirm">새 비밀번호 재확인 이미지</string>
    <string name="content_description_image_name">이름 이미지</string>
    <string name="content_description_image_nickname">닉네임 이미지</string>
    <string name="content_description_image_email">이메일 이미지</string>
    <string name="content_description_image_phone">휴대전화 번호 이미지</string>
    <string name="content_description_image_auth">인증번호 이미지</string>
    <string name="content_description_image_done">가입완료 이미지</string>
    <string name="content_description_image_id_finish">아이디 찾기 결과 이미지</string>
    <string name="content_description_image_password_finish">비밀번호 찾기 결과 이미지</string>
    <string name="content_description_image_preview">미리보기 이미지</string>
    <string name="content_description_note_quick_video">동영상 바로가기</string>
    <string name="content_description_image_star">별점 이미지</string>
    <string name="content_description_image_video_option">비디오 옵션 이미지</string>
    <string name="content_description_image_category_dismiss">스피너 팝업 닫기 이미지</string>
    <string name="content_description_image_category_check">스피너 체크 이미지</string>
    <string name="content_description_image_play_speed_check">재생 속도 선택 이미지</string>
    <string name="content_description_image_pass">이용권 이미지</string>
    <string name="content_description_no_item">목록 없음 경고 이미지</string>
    <string name="content_description_image_arrow">화살표 이미지</string>
    <string name="content_description_image_teacher">선생님 이미지</string>
    <string name="content_description_image_video_info_button">비디오 정보 더보기 버튼 이미지</string>
    <string name="content_description_image_note">노트 이미지</string>
    <string name="content_description_image_question">상담하기 질문 이미지</string>
    <string name="content_description_image_cc">자막 온/오프 이미지</string>
    <string name="content_description_image_full_screen">최대화 이미지</string>
    <string name="content_description_image_rotate">회전 이미지</string>
    <string name="content_description_image_replay">리플레이 이미지</string>
    <string name="content_description_image_more">더보기 이미지</string>
    <string name="content_description_image_facebook">페이스북 로고 이미지</string>
    <string name="content_description_image_kakaotalk">카카오톡 로고 이미지</string>
    <string name="content_description_image_delete">삭제 이미지</string>
    <string name="content_description_image_caption">자막 표시 이미지</string>
    <string name="content_description_image_play_speed">재생 속도 이미지</string>
    <string name="content_description_image_close_canvas">캔버스 메뉴 닫기 이미지</string>
    <string name="content_description_calendar_before">달력 뒤로 가기 이미지</string>
    <string name="content_description_calendar_next">달력 앞으로 가기 이미지</string>
    <string name="content_description_calendar_add">일정 추가 이미지</string>
    <string name="content_description_qna_add">질문 추가 이미지</string>
    <string name="content_description_calendar_repeat">반복 표시 이미지</string>
    <string name="content_description_calendar_alarm">알람 표시 이미지</string>
    <string name="content_description_note">노트 이미지</string>
    <string name="content_description_note_play">노트 재생 이미지</string>
    <string name="content_description_note_pause">노트 일시정지 이미지</string>
    <string name="content_description_note_close">노트 플레이어 닫기 이미지</string>
    <string name="content_description_remove">삭제 이미지</string>
    <string name="content_description_bottom_thumbnail">하단 동영상 썸네일 이미지</string>
    <string name="content_description_share">[강추!] 혼자 보기 아까운 공만세 강의를 추천합니다. 우리 함께 보아요~</string>
    <string name="content_button_login">로그인</string>
    <string name="content_button_register">회원가입</string>
    <string name="content_button_find_id">아이디 찾기</string>
    <string name="content_button_find_password">비밀번호 찾기</string>
    <string name="content_button_next">다음</string>
    <string name="content_button_how_to_use">이용방법</string>
    <string name="content_button_service_error">서비스 장애</string>
    <string name="content_button_payment_auth">결제 및 인증</string>
    <string name="content_button_lecture_request">강의 요청</string>
    <string name="content_button_other_question">기타 문의</string>
    <string name="content_text_slash">|</string>
    <string name="content_hint_id">아이디</string>
    <string name="content_hint_password">비밀번호</string>
</resources>