<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <!-- 닫기 버튼 -->
    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/content_description_image_close"
        android:focusable="true"
        android:clickable="true"
        android:onClick="onClick"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- 로고 아이콘 -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:contentDescription="@string/content_description_image_logo"
        app:srcCompat="@mipmap/ic_logo"
        app:layout_constraintTop_toBottomOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 아이디 -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/NanumSquareRoundB.FormInputLayout"
        android:id="@+id/layout_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:hint="@string/content_hint_id"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_id_off"
        app:startIconContentDescription="@string/content_description_image_id"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/NanumSquareRoundB.FormInputText"
            android:id="@+id/input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 비밀번호 -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/NanumSquareRoundB.FormInputLayout"
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:hint="@string/content_hint_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_password_off"
        app:startIconContentDescription="@string/content_description_image_password"
        app:layout_constraintTop_toBottomOf="@id/layout_input_id">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/NanumSquareRoundB.FormInputText"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 로그인 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:focusable="true"
        android:clickable="true"
        android:onClick="onClick"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_input_password">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_round_b"
            android:gravity="center"
            android:letterSpacing="-0.04"
            android:lineSpacingExtra="24sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:text="@string/content_button_login"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"

        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <!-- 아이디 찾기 -->
        <TextView
            android:id="@+id/btn_find_by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:onClick="onClick"
            android:letterSpacing="-0.04"
            android:lineSpacingExtra="24sp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/light_black2"
            android:textSize="17sp"
            android:text="@string/content_button_find_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/light_black2"
            android:textSize="17sp"
            android:text="@string/content_text_slash"/>

        <!-- 비밀번호 찾기 -->
        <TextView
            android:id="@+id/btn_find_by_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:onClick="onClick"
            android:letterSpacing="-0.04"
            android:lineSpacingExtra="24sp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/light_black2"
            android:textSize="17sp"
            android:text="@string/content_button_find_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/light_black2"
            android:textSize="17sp"
            android:text="@string/content_text_slash"/>

        <!-- 회원가입 -->
        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:letterSpacing="-0.04"
            android:lineSpacingExtra="24sp"
            android:gravity="center"
            android:onClick="onClick"
            android:fontFamily="@font/nanum_square_round_b"
            android:text="@string/content_button_register"
            android:textColor="@color/light_black2"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>