<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.gongmanse.app.model.OneToOneData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.customer.AddOneToOneActivity">

        <!-- Actionbar -->
        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

            <TextView
                android:id="@+id/tv_category_title"
                style="@style/NanumSquareRoundEB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="44sp"
                android:text="@string/content_title_qna_category"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_category_title"
                app:chipSpacingHorizontal="25dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category1"
                    style="@style/ChipEvent"
                    android:text="@string/content_button_how_to_use"
                    android:onClick="onClick"
                    tools:text="이용방법" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category2"
                    style="@style/ChipEvent"
                    android:onClick="onClick"
                    android:text="@string/content_button_service_error"
                    tools:text="서비스 장애" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category3"
                    style="@style/ChipEvent"
                    android:onClick="onClick"
                    android:text="@string/content_button_payment_auth"
                    tools:text="결제 및 인증" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category4"
                    style="@style/ChipEvent"
                    android:onClick="onClick"
                    android:text="@string/content_button_lecture_request"
                    tools:text="강의 요청" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category5"
                    style="@style/ChipEvent"
                    android:onClick="onClick"
                    android:text="@string/content_button_other_question"
                    tools:text="기타 문의" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_answer_title"
                style="@style/NanumSquareRoundEB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="44sp"
                android:text="@string/content_counsel_detail_title1"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cg_category" />

            <EditText
                android:id="@+id/et_question"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:autofillHints="no"
                android:background="@drawable/background_round_border_gray"
                android:gravity="start|top"
                android:hint="@string/content_counsel_hint"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:singleLine="false"
                android:textSize="12sp"
                bindRemoveMarkUpQNA="@{data.question}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_answer_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_answer_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layout_button"
            layout="@layout/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>