<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_round_border_trans">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="230dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            style="@style/NanumSquareRoundB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/content_counsel_dialog_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="0.7"
            android:contentDescription="@string/content_description_image_close"
            android:scaleX="0.7"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/iv_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_photo"
            android:contentDescription="@string/content_description_image_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/iv_select_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_image_video"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_select_photo"
            style="@style/NanumSquareRoundB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/content_counsel_dialog_select1"
            app:layout_constraintEnd_toEndOf="@+id/iv_select_photo"
            app:layout_constraintStart_toStartOf="@+id/iv_select_photo"
            app:layout_constraintTop_toBottomOf="@+id/iv_select_photo" />

        <TextView
            android:id="@+id/tv_select_vid"
            style="@style/NanumSquareRoundB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/content_counsel_dialog_select2"
            app:layout_constraintEnd_toEndOf="@+id/iv_select_video"
            app:layout_constraintStart_toStartOf="@+id/iv_select_video"
            app:layout_constraintTop_toBottomOf="@+id/iv_select_video" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>