<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.Intro.IntroActivity">

    <TextView
        style="@style/NanumSquareRoundB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="30sp"
        android:text="@string/content_intro_text1"
        android:textColor="@color/light_black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        tools:text="동영상학습 백과사전" />

    <TextView
        android:id="@+id/textView"
        style="@style/NanumSquareRoundEB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="0sp"
        android:text="@string/content_intro_text2"
        android:textSize="50sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="동영상 강의\n45,000" />

    <TextView
        android:id="@+id/textView4"
        style="@style/NanumSquareRoundB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="46dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="38sp"
        android:text="@string/content_intro_text3"
        android:textColor="@color/light_black2"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="253dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="111dp"
        android:contentDescription="@string/desc_image_intro"
        android:src="@mipmap/intro_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_intro_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="28dp"
        android:text="@string/content_button_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>